--- a/media.css
+++ b/media.css
@@ -39,7 +39,7 @@
 		background-size: 100%;
 	}
 	.img-avatar {
-		background-image: url("img/avatar-photo.png");
+		background-image: url("img/avatar-photo.jpg");
 		background-size: 100%;
 	}
 	.img-showcase {
