--- a/main.css
+++ b/main.css
@@ -30,6 +30,14 @@ h1 span {
 	/* Hello, I am Ludovit: */
 }
 
+hr{
+	border: none;
+	height: 1px;
+	background-color: rgba(255,255,255,0.2);
+	margin-top: 38px;
+	width: 100%;
+}
+
 h2 {
 	font-size: 27px;
 	margin-top: 0;
@@ -114,6 +122,16 @@ nav .container {
 	background-image: url("img/signature.png");
 }
 
+.btn-container{
+	width: 100%;
+	height: 45px;
+	float: left;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	align-items: center;
+}
+
 .btn {
 	height: 45px;
 	box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.10), 0px 0px 20px 0px rgba(96,80,113,0.66);
@@ -182,9 +200,14 @@ nav .container {
 .item {
 	width: 450px;
 	margin-bottom: 140px;
+	display: flex;
+	flex-flow: column wrap;
+	justify-content: space-around;
+	align-items: center;
 }
 
 .img-preview {
+	float: left;
 	margin-top: 40px;
 	width: 450px;
 	height: 338px;
@@ -194,7 +217,7 @@ nav .container {
 
 .buy {
 	background: #FFFFFF;
-	margin: 40px auto 0 auto;
+	margin: 25px auto 0 auto;
 	display: block;
 	padding: 0 20px 0 20px;
 	font-weight: 400;
@@ -226,6 +249,26 @@ h5 {
 	position: relative;
 }
 
+.texts-container{
+	width: 100%;
+	height: auto;
+	float: left;
+	display: flex;
+	flex-flow: column wrap;
+	justify-content: space-around;
+	align-items: flex-start;
+}
+
+.description-container{
+	width: 100%;
+	height: 40px;
+	float: left;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;
+	align-items: center;
+}
+
 .description {
 	font-weight: bold;
 }
@@ -233,8 +276,4 @@ h5 {
 .price {
 	text-align: right;
 	position: relative;
-	text-align: right;
-	position: relative;
-	top: -61px;
-	float: right;
 }
