--- a/main.css
+++ b/main.css
@@ -92,13 +92,21 @@ nav .container {
 	max-width: 1200px;
     margin: 100px auto;
     width: 90%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: column wrap;
-    justify-content: space-between;
-    align-items: center;
+    -ms-flex-flow: column wrap;
+        flex-flow: column wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .box {
+	background-image: -webkit-linear-gradient(bottom, #6C5B7B 0%, #F8B195 100%);
 	background-image: linear-gradient(0deg, #6C5B7B 0%, #F8B195 100%);
 	box-shadow: 0px -5px 5px 0px rgba(0,0,0,0.08);
 	padding: 50px 60px;
@@ -130,10 +138,17 @@ nav .container {
 	width: 100%;
 	height: 45px;
 	float: left;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-flow: row wrap;
-	justify-content: center;
-	align-items: center;
+	-ms-flex-flow: row wrap;
+	    flex-flow: row wrap;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 }
 
 .btn {
@@ -169,16 +184,6 @@ nav .container {
 	margin-bottom: 230px;
 }
 
-// #driver::before{
-// 	content: "";
-// 	width: 1640px;
-// 	height: 400px;
-// 	background-image: url("img/blured-bg.png");
-// 	position: absolute;
-// 	left: 50%;
-// 	top: 0;
-// }
-
 .img-showcase {
 	background-image: url("img/preview.png");
 	width: 783px;
@@ -195,20 +200,34 @@ nav .container {
 .store-list {
 	width: 1200px;
 	list-style: none;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: space-between;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	padding: 0;
 }
 
 .item {
 	width: 450px;
 	margin-bottom: 140px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-flow: column wrap;
-	justify-content: space-around;
-	align-items: center;
+	-ms-flex-flow: column wrap;
+	    flex-flow: column wrap;
+	-ms-flex-pack: distribute;
+	    justify-content: space-around;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 }
 
 .img-preview {
@@ -253,20 +272,33 @@ h5 {
 #subscribe {
 	position: relative;
 	width: 1080px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-flow: row wrap;
-	justify-content: space-between;
-	align-items: center;
+	-ms-flex-flow: row wrap;
+	    flex-flow: row wrap;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 }
 
 .subscribe-text-container{
 	width: 45%;
 	height: auto;
 	float: left;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-flow: column wrap;
-	justify-content: space-around;
-	align-items: flex-start;
+	-ms-flex-flow: column wrap;
+	    flex-flow: column wrap;
+	-ms-flex-pack: distribute;
+	    justify-content: space-around;
+	-webkit-box-align: start;
+	    -ms-flex-align: start;
+	        align-items: flex-start;
 }
 
 .email-container{
@@ -307,10 +339,16 @@ input[type='submit']{
 	width: 100%;
 	height: auto;
 	float: left;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-flow: column wrap;
-	justify-content: space-around;
-	align-items: flex-start;
+	-ms-flex-flow: column wrap;
+	    flex-flow: column wrap;
+	-ms-flex-pack: distribute;
+	    justify-content: space-around;
+	-webkit-box-align: start;
+	    -ms-flex-align: start;
+	        align-items: flex-start;
 }
 
 .description-container{
@@ -318,10 +356,17 @@ input[type='submit']{
 	width: 100%;
 	height: 40px;
 	float: left;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-flow: row wrap;
-	justify-content: space-between;
-	align-items: center;
+	-ms-flex-flow: row wrap;
+	    flex-flow: row wrap;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 }
 
 .description {
